--- a/style.html
+++ b/style.html
@@ -16,7 +16,7 @@
     <p> マンツーマンサポートによる学習で、確実にWebスキルを習得できるプログラミングスクールです。
     </p>
    </div>
-   <div class="step-box">
+   <div class="step-box secound">
    	<div class="step-img2"></div>
    	<span class="step-num">step2</span>
    	<h3 class="title">webcamp pro</h3>
